--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -268,6 +268,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.004019, -0.003987, 0
 		
 ![wpn_ace52_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ace52_specter_hud]
@@ -387,6 +388,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02188, 0.005412, 0
 		
 ![wpn_ak5c_bas_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak5c_bas_specter_hud]
@@ -464,6 +466,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = 0.006526, 0.007779, 0.78
 		
 ![wpn_ak5c_bas_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak5c_bas_spec_alt_hud]
@@ -507,6 +510,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02188, 0.005412, 0
 		
 ![wpn_ak5c_isg_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak5c_isg_specter_hud]
@@ -594,6 +598,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.01489, 0.004947, 0
 		
 ![wpn_amb17_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_amb17_specter_hud]
@@ -623,6 +628,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.01489, 0.004947, 0
 		
 ![wpn_amb17_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_amb17_spec_alt_hud]
@@ -680,12 +686,11 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_ash12_sup]
 scopes 			= none 
 parent_section 	= wpn_ash12_sup
+zoom_step_count=1
 
 	s3ds_reticle_size 	= 4.5
 	s3ds_eye_relief 	= 2
 	s3ds_ffp			= 1
-	s3ds_min_zoom_fov 	= 56
-	s3ds_max_zoom_fov 	= 20
 	s3ds_chroma_power	= 0.04	
 	s3ds_reticle_type 	= 4
 	ms_count 			= 3
@@ -811,6 +816,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001183, 0.000556, -0.008708
 		
 ![wpn_aug_merc_specter]
+zoom_step_count=1
 scope_zoom_factor                = 30
 scope_texture                    =
 
@@ -1166,6 +1172,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.003071, 0.011237, 0
 		
 ![wpn_fal_sa58_osw_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
@@ -1249,6 +1256,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = -0.014907, 0.020632, 0.78
 		
 ![wpn_fal_sa58_osw_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
@@ -1332,6 +1340,7 @@ scope_status                     = 1.
         aim_hud_offset_rot_16x9          = 0.039467, 0.016926, 0
 		
 ![wpn_fn2000_nimble_specter]
+zoom_step_count=1
 scope_zoom_factor                = 30
 scope_texture                    =
 		
@@ -1461,6 +1470,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 	aim_hud_offset_alt_rot_16x9        = -0.0035, 0.007, 0.4
 	
 ![wpn_g36nimble_rwap_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_g36nimble_rwap_specter_hud]	
@@ -1611,6 +1621,7 @@ use_alt_aim_hud                   = false
         aim_hud_offset_rot_16x9          = 0.017902, 0.001606, 0.00387
 		
 ![wpn_g36ka4_rwap_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_g36ka4_rwap_specter_hud]
@@ -1780,6 +1791,7 @@ nv_scope_status 				 = 0
         aim_hud_offset_rot_16x9          = 0.021356, 0.013753, 0
 		
 ![wpn_groza_nimble_specter]
+zoom_step_count=1
 scope_zoom_factor       = 30
 scope_texture           =
 
@@ -1890,6 +1902,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.002189, -0.003566, 0
 		
 ![wpn_l85_m2_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_l85_m2_specter_hud]		
@@ -1969,6 +1982,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.002189, -0.003566, 0
 		
 ![wpn_l85_m2_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_l85_m2_spec_alt_hud]
@@ -2194,6 +2208,7 @@ scope_texture                    =
         aim_hud_offset_rot_16x9          = 0.015459, 0.002184, 0.009321
 		
 ![wpn_pkm_zenit_siber_specter]
+zoom_step_count=1
 scope_dynamic_zoom				 = on
 scope_zoom_factor                = 30
 scope_texture                    =
@@ -2277,6 +2292,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.00977, -0.021498, 0
 		
 ![wpn_scar_siber_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_scar_siber_specter_hud]
@@ -2356,6 +2372,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.00977, -0.021498, 0
 		
 ![wpn_scar_siber_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_scar_siber_spec_alt_hud]
@@ -2426,6 +2443,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.007866, -0.003393, -0.001
 		
 ![wpn_scar_siber_m1_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_scar_siber_m1_specter_hud]
@@ -2505,6 +2523,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.007866, -0.003393, -0.001
 		
 ![wpn_scar_siber_m1_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_scar_siber_m1_spec_alt_hud]
@@ -2585,6 +2604,7 @@ use_alt_aim_hud		= true
         aim_hud_offset_alt_rot_16x9      = 0.003919, 0.014782, 0.75
 		
 ![wpn_scar_siber_m2_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_scar_siber_m2_specter_hud]
@@ -3643,6 +3663,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.000429, -0.012057, 0
 		
 ![wpn_ak104_alfa_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak104_alfa_specter_hud]
@@ -3657,6 +3678,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.012701, -0.012367, 0
 		
 ![wpn_ak104_alfa_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak104_alfa_spec_alt_hud]
@@ -3805,12 +3827,11 @@ hud		= wpn_ak105_1pn93_hud
 ![wpn_ak105_swamp]
 scope_zoom_factor                = 30
 scope_texture                    =
+zoom_step_count=1
 		
 	s3ds_reticle_size 	= 4.5
 	s3ds_eye_relief 	= 2
 	s3ds_ffp			= 1
-	s3ds_min_zoom_fov 	= 56
-	s3ds_max_zoom_fov 	= 20
 	s3ds_chroma_power	= 0.04	
 	s3ds_reticle_type 	= 4
 	ms_count 			= 3
@@ -3897,6 +3918,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.00114, -0.031156, 0
 		
 ![wpn_ak12_custom_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak12_custom_specter_hud]
@@ -3911,6 +3933,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.00712, -0.031369, 0
 		
 ![wpn_ak12_custom_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak12_custom_spec_alt_hud]
@@ -4071,6 +4094,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.015837, -0.002973, 0.008665
 		
 ![wpn_ak12_m1_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak12_m1_specter_hud]
@@ -4085,6 +4109,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.009887, -0.003203, 0.008665
 		
 ![wpn_ak12_m1_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak12_m1_spec_alt_hud]
@@ -4196,6 +4221,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.020414, 0.005237, 0.005
 		
 ![wpn_ak74_isg_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_isg_specter_hud]
@@ -4397,6 +4423,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.015293, 0.010194, -0.01
 		
 ![wpn_ak74_pmc_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_pmc_specter_hud]
@@ -4411,6 +4438,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.009708, 0.010113, -0.01
 		
 ![wpn_ak74_pmc_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74_pmc_spec_alt_hud]
@@ -4824,6 +4852,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001262, -0.011801, -0.000959
 		
 ![wpn_ak74u_isg_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74u_isg_specter_hud]
@@ -4838,6 +4867,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.004579, -0.012222, -0.000959
 		
 ![wpn_ak74u_isg_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74u_isg_spec_alt_hud]
@@ -4947,6 +4977,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.022119, 0.008838, -0.000959
 		
 ![wpn_ak74u_m1_isg_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74u_m1_isg_specter_hud]
@@ -4956,6 +4987,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.016592, 0.0086, -0.000959
 		
 ![wpn_ak74u_m1_isg_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak74u_m1_isg_spec_alt_hud]
@@ -5267,6 +5299,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001479, -0.012049, 0
 		
 ![wpn_akm_alfa_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_akm_alfa_specter_hud]
@@ -5281,6 +5314,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.004313, -0.012368, 0
 		
 ![wpn_akm_alfa_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_akm_alfa_spec_alt_hud]
@@ -5415,6 +5449,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.025674, 0.009103, -0.000959
 		
 ![wpn_akm_isg_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_akm_isg_specter_hud]
@@ -5424,6 +5459,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.01993, 0.009059, -0.000959
 		
 ![wpn_akm_isg_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_akm_isg_spec_alt_hud]
@@ -5556,6 +5592,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001362, -0.003348, -0.005
 		
 ![wpn_rpk74_16_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_rpk74_16_specter_hud]
@@ -5570,6 +5607,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.004441, -0.00367, -0.005
 		
 ![wpn_rpk74_16_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_rpk74_16_spec_alt_hud]
@@ -5954,6 +5992,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.026449, 0.009246, 0
 		
 ![wpn_vintorez_isg_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_vintorez_isg_specter_hud]
@@ -6121,6 +6160,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.003829, -0.010176, -0.07
 
 ![wpn_xm4_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_xm4_specter_hud]
@@ -6152,6 +6192,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02004, 0.005456, 0
 		
 ![wpn_adar2_15_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_adar2_15_specter_hud]
@@ -6221,6 +6262,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         !aim_hud_offset_alt_rot_16x9      
 		
 ![wpn_m4_butcher_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_m4_butcher_specter_hud]
@@ -6329,6 +6371,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = 0.027954, -0.024, 0.78
 		
 ![wpn_m4_ru556_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_m4_ru556_specter_hud]
@@ -6469,6 +6512,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = -0.02129, -0.004893, 0.78
 		
 ![wpn_m4_tac_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_m4_tac_specter_hud]
@@ -6483,6 +6527,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001672, -0.012363, 0
 		
 ![wpn_m4_tac_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_m4_tac_spec_alt_hud]
@@ -6622,6 +6667,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = -0.014873, -0.00823, 0.78
 		
 ![wpn_m4a1_siber_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_m4a1_siber_specter_hud]
@@ -6636,6 +6682,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.004268, -0.010676, 0
 		
 ![wpn_m4a1_siber_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_m4a1_siber_spec_alt_hud]
@@ -6749,6 +6796,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.017333, 0.0205, 0
 		
 ![wpn_brn180_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -6764,6 +6812,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.011956, 0.020241, 0
 		
 ![wpn_brn180_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -6880,6 +6929,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.019824, 0.05739, -0.015
 		
 ![wpn_dtmdr_black_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -7017,6 +7067,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.019824, 0.05739, -0.015
 		
 ![wpn_dtmdr_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -7159,6 +7210,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.020077, 0.003846, -0.051
 		
 ![wpn_lewd_fad_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
