--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
@@ -128,6 +128,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.010257, -0.003306, 0
 		
 ![wpn_ump45_custom_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
@@ -160,6 +161,7 @@ lewd_lens_hide_aim_mode      = true, false, false
  
 		
 ![wpn_raptr_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -209,6 +211,7 @@ lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
 
 ![wpn_p90gamma_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
@@ -254,6 +257,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.036236, 0.022256, -0.010768
 		
 ![wpn_pp2000_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on		
@@ -365,6 +369,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02654, 0.005765, -0.004
 		
 ![wpn_mp9_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -391,6 +396,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02654, 0.005765, -0.004
 		
 ![wpn_mp9_n_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
