--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -1317,6 +1317,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001061, -0.029568, 0
 		
 ![wpn_sr25_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_sr25_specter_hud]
@@ -1414,6 +1415,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = 0.021783, 0.016227, 0
 		
 ![wpn_marlin_tracker_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -1429,6 +1431,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.020462, 0.011365, 0.00782
 		
 ![wpn_marlin_tracker_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -1580,6 +1583,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.009873, -0.003581, 0
 		
 ![wpn_mjolnir_specter]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -1595,6 +1599,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.004443, -0.003763, 0
 		
 ![wpn_mjolnir_spec_alt]
+zoom_step_count=1
         scope_zoom_factor                = 30
         scope_texture                    =
 		scope_dynamic_zoom               = on
