ak105 swamp and shakal sounds fix

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzzzzzz_ak105_phant.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzzzzzz_ak105_phant.ltx
@@ -62,6 +62,7 @@ snd_draw                = weapons\ak12custom\draw
 snd_holster             = weapons\ak12custom\hide
 
 snd_empty               = weapons\ak12custom\ak12_empty
+
 snd_reload              = weapons\aksu_prince\aksu_tact_reload
 snd_reload_empty        = weapons\aksu_prince\aksu_tact_reload_empty
 snd_reload_misfire      = weapons\aksu_prince\aksu_tact_misfire
@@ -187,23 +188,20 @@ snd_draw                = weapons\ak12custom\draw
 snd_holster             = weapons\ak12custom\hide
 
 snd_empty               = weapons\ak12custom\ak12_empty
-snd_reload              = weapons\aksu_prince\aksu_tact_reload
-snd_reload_empty        = weapons\aksu_prince\aksu_tact_reload_empty
-snd_reload_misfire      = weapons\aksu_prince\aksu_tact_misfire
 
-;snd_silncer_shot        = weapons\aksu_prince\aksu_shot_sil_1
-;snd_silncer_shot1       = weapons\aksu_prince\aksu_shot_sil_2
-;snd_silncer_shot2       = weapons\aksu_prince\aksu_shot_sil_3
-;snd_silncer_shot3       = weapons\aksu_prince\aksu_shot_sil_4
-;snd_silncer_shot4       = weapons\aksu_prince\aksu_shot_sil_5
+snd_reload              = weapons\ak74u_tac_young_prince\aksu_tac_reload
+snd_reload_empty        = weapons\ak74u_tac_young_prince\aksu_tac_reload_empty
+snd_reload_misfire      = weapons\ak74u_tac_young_prince\aksu_tac_unjam
 
-;snd_shoot                = weapons\aksu_prince\aksu_shot_1
-;snd_shoot1               = weapons\aksu_prince\aksu_shot_2
-;snd_shoot2               = weapons\aksu_prince\aksu_shot_3
-;snd_shoot3               = weapons\aksu_prince\aksu_shot_4
-;snd_shoot4               = weapons\aksu_prince\aksu_shot_5
+snd_shoot                                = weapons\akm_young_prince\akm_shot_dtk_1
+snd_shoot1                               = weapons\akm_young_prince\akm_shot_dtk_2
+snd_shoot2                               = weapons\akm_young_prince\akm_shot_dtk_3
 
-;snd_switch_mode			= weapons\generic\switch_mode
+snd_silncer_shot        = weapons\akm_young_prince\akm_shot_sil_1
+snd_silncer_shot1       = weapons\akm_young_prince\akm_shot_sil_2
+snd_silncer_shot2       = weapons\akm_young_prince\akm_shot_sil_3
+
+snd_switch_mode                          = weapons\generic\switch_mode
 ;-----------------------------------------------------shakal_HUD-----------------------------------------------------------------------------
 ![wpn_ak105_shakal_hud]
 ;------
