ShinyHaxorus DE integration for next gamma update

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
@@ -435,3 +435,211 @@ item_visual                		= dynamics\weapons\wpn_rpg7\wpn_rpg7_pgo_hud.ogf
         aim_hud_offset_rot_16x9          = 0.039209, 0.040039, 0
 	
 ;==============================================================================
+![wpn_desert_eagle_nimble]
+scopes				 = march_f_shorty, acog, lazup_pl15, rmr, d0cter, deltapoint, t12
+scope_status		 = 0
+parent_section 		 = wpn_desert_eagle_nimble
+
+lewd_lens_hide_enabled       = true
+lewd_lens_hide_bone          = lens
+lewd_lens_hide_delays        = 0.1,0
+lewd_lens_hide_aim_mode      = true, false, false	
+
+![wpn_desert_eagle_nimble_hud]
+        aim_hud_offset_pos               = -0.052135, 0.027334, 0
+        aim_hud_offset_pos_16x9          = -0.052135, 0.027334, 0
+        aim_hud_offset_rot               = -0.016089, -0.012265, -0.008
+        aim_hud_offset_rot_16x9          = -0.016089, -0.012265, -0.008
+;--------------------------------------------------------------------------------		
+[wpn_desert_eagle_nimble_acog]:wpn_desert_eagle_nimble
+hud                                      = wpn_desert_eagle_nimble_acog_hud
+1icon_layer                              = acog
+1icon_layer_x                            = 35
+1icon_layer_y                            = -5
+
+inv_weight                  					   = 2.25
+
+scope_status                            = 1
+scope_zoom_factor                       = 42.86
+zoom_rotate_time                        = 0.25
+
+[wpn_desert_eagle_nimble_acog_hud]:wpn_desert_eagle_nimble_hud
+
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_acog_hud.ogf
+        aim_hud_offset_pos               = -0.050566, 0.006085, -0.273776
+        aim_hud_offset_pos_16x9          = -0.050566, 0.006085, -0.273776
+        aim_hud_offset_rot               = -0.00731, -0.016475, -0.008
+        aim_hud_offset_rot_16x9          = -0.00731, -0.016475, -0.008
+		
+![wpn_desert_eagle_nimble_acog]
+scope_texture                                      = 
+scope_zoom_factor                                  = 42.86
+zoom_rotate_time                                   = 0.25
+![wpn_desert_eagle_nimble_acog_hud]
+        aim_hud_offset_pos               = -0.050566, 0.006085, -0.273776
+        aim_hud_offset_pos_16x9          = -0.050566, 0.006085, -0.273776
+        aim_hud_offset_rot               = -0.00731, -0.016475, -0.008
+        aim_hud_offset_rot_16x9          = -0.00731, -0.016475, -0.008
+;--------------------------------------------------------------------------------		
+[wpn_desert_eagle_nimble_march_f_shorty]:wpn_desert_eagle_nimble
+hud                                      = wpn_desert_eagle_nimble_march_f_shorty_hud
+1icon_layer                              = march_f_shorty
+1icon_layer_x                            = 35
+1icon_layer_y                            = -35
+inv_weight                  					   = 2.32
+
+scope_status                                       = 1
+scope_zoom_factor                                  = 15
+zoom_rotate_time                                   = 0.25
+scope_dynamic_zoom              				   = on
+
+[wpn_desert_eagle_nimble_march_f_shorty_hud]:wpn_desert_eagle_nimble_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_leupold_hud.ogf
+        aim_hud_offset_pos               = -0.050239, 0.005236, -0.282869
+        aim_hud_offset_pos_16x9          = -0.050239, 0.005236, -0.282869
+        aim_hud_offset_rot               = -0.013636, -0.017193, -0.008
+        aim_hud_offset_rot_16x9          = -0.013636, -0.017193, -0.008
+
+;--------------------------------------------------------------------------------		
+[wpn_desert_eagle_nimble_lazup_pl15]:wpn_desert_eagle_nimble
+hud                    = wpn_desert_eagle_nimble_lazup_pl15_hud
+
+icons_texture               = ui\ui_icon_deagle        
+inv_grid_x                  = 0
+inv_grid_y					= 1
+
+		inv_weight			   = 2.27
+		
+		laser_status		   = true
+		use_alt_aim_hud		   = true
+		
+[wpn_desert_eagle_nimble_lazup_pl15_hud]:wpn_desert_eagle_nimble_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_lazup_hud.ogf	
+        base_hud_offset_rot              = -0.023329, -0.022621, 0
+        base_hud_offset_rot_16x9         = -0.023329, -0.022621, 0
+		
+        aim_hud_offset_alt_pos           = -0.081637, -0.049328, -0.045934
+        aim_hud_offset_alt_pos_16x9      = -0.081637, -0.049328, -0.045934
+        aim_hud_offset_alt_rot           = -0.017079, -0.006405, 0.75
+        aim_hud_offset_alt_rot_16x9      = -0.017079, -0.006405, 0.75		
+		
+;--------------------------------------------------------------------------------	
+[wpn_desert_eagle_nimble_rmr]:wpn_desert_eagle_nimble
+hud                                      = wpn_desert_eagle_nimble_rmr_hud
+1icon_layer                              = rmr
+1icon_layer_x                            = 35
+1icon_layer_y                            = -26
+
+inv_weight                  			 = 2.32
+
+
+[wpn_desert_eagle_nimble_rmr_hud]:wpn_desert_eagle_nimble_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_rmr_hud.ogf
+        aim_hud_offset_pos               = -0.052294, 0.018175, 0
+        aim_hud_offset_pos_16x9          = -0.052294, 0.018175, 0
+        aim_hud_offset_rot               = -0.015805, -0.011629, -0.008
+        aim_hud_offset_rot_16x9          = -0.015805, -0.011629, -0.008
+;--------------------------------------------------------------------------------
+[wpn_desert_eagle_nimble_d0cter]:wpn_desert_eagle_nimble
+hud                                      = wpn_desert_eagle_nimble_d0cter_hud
+1icon_layer                              = d0cter
+1icon_layer_x                            = 35
+1icon_layer_y                            = -28
+
+inv_weight                  			 = 2.32
+
+[wpn_desert_eagle_nimble_d0cter_hud]:wpn_desert_eagle_nimble_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_docter_hud.ogf
+        aim_hud_offset_pos               = -0.052188, 0.020163, 0
+        aim_hud_offset_pos_16x9          = -0.052188, 0.020163, 0
+        aim_hud_offset_rot               = -0.016089, -0.012265, -0.008
+        aim_hud_offset_rot_16x9          = -0.016089, -0.012265, -0.008
+;--------------------------------------------------------------------------------
+[wpn_desert_eagle_nimble_deltapoint]:wpn_desert_eagle_nimble
+hud                                      = wpn_desert_eagle_nimble_deltapoint_hud
+1icon_layer                              = deltapoint
+1icon_layer_x                            = 35
+1icon_layer_y                            = -28
+
+inv_weight                  			= 2.32
+
+[wpn_desert_eagle_nimble_deltapoint_hud]:wpn_desert_eagle_nimble_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_deltapoint_hud.ogf
+        aim_hud_offset_pos               = -0.053142, 0.014696, 0
+        aim_hud_offset_pos_16x9          = -0.053142, 0.014696, 0
+        aim_hud_offset_rot               = -0.016302, -0.009924, -0.008
+        aim_hud_offset_rot_16x9          = -0.016302, -0.009924, -0.008
+;--------------------------------------------------------------------------------
+[wpn_desert_eagle_nimble_t12]:wpn_desert_eagle_nimble
+hud                                      = wpn_desert_eagle_nimble_t12_hud
+1icon_layer                              = t12
+1icon_layer_x                            = 35
+1icon_layer_y                            = -28
+
+inv_weight                  			= 2.32
+
+[wpn_desert_eagle_nimble_t12_hud]:wpn_desert_eagle_nimble_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_nimble_t12_hud.ogf
+        aim_hud_offset_pos               = -0.053142, 0.014696, 0
+        aim_hud_offset_pos_16x9          = -0.053142, 0.014696, 0
+        aim_hud_offset_rot               = -0.016302, -0.009924, -0.008
+        aim_hud_offset_rot_16x9          = -0.016302, -0.009924, -0.008		
+;==============================================================================
+![wpn_desert_eagle]
+scopes				 = rmr, d0cter, deltapoint
+scope_status		 = 0
+parent_section 		 = wpn_desert_eagle
+
+![wpn_desert_eagle_nimble_hud]
+        aim_hud_offset_pos               = -0.052135, 0.027334, 0
+        aim_hud_offset_pos_16x9          = -0.052135, 0.027334, 0
+        aim_hud_offset_rot               = -0.016089, -0.012265, -0.008
+        aim_hud_offset_rot_16x9          = -0.016089, -0.012265, -0.008
+
+;--------------------------------------------------------------------------------	
+[wpn_desert_eagle_rmr]:wpn_desert_eagle
+hud                                      = wpn_desert_eagle_rmr_hud
+1icon_layer                              = rmr
+1icon_layer_x                            = 35
+1icon_layer_y                            = -26
+
+inv_weight                  			 = 2.32
+
+
+[wpn_desert_eagle_rmr_hud]:wpn_desert_eagle_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_rmr_hud.ogf
+        aim_hud_offset_pos               = -0.052294, 0.018175, 0
+        aim_hud_offset_pos_16x9          = -0.052294, 0.018175, 0
+        aim_hud_offset_rot               = -0.015805, -0.011629, -0.008
+        aim_hud_offset_rot_16x9          = -0.015805, -0.011629, -0.008
+;--------------------------------------------------------------------------------
+[wpn_desert_eagle_d0cter]:wpn_desert_eagle
+hud                                      = wpn_desert_eagle_d0cter_hud
+1icon_layer                              = d0cter
+1icon_layer_x                            = 35
+1icon_layer_y                            = -28
+
+inv_weight                  			 = 2.32
+
+[wpn_desert_eagle_d0cter_hud]:wpn_desert_eagle_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_doctor_hud.ogf
+        aim_hud_offset_pos               = -0.052188, 0.020163, 0
+        aim_hud_offset_pos_16x9          = -0.052188, 0.020163, 0
+        aim_hud_offset_rot               = -0.016089, -0.012265, -0.008
+        aim_hud_offset_rot_16x9          = -0.016089, -0.012265, -0.008
+;--------------------------------------------------------------------------------
+[wpn_desert_eagle_deltapoint]:wpn_desert_eagle
+hud                                      = wpn_desert_eagle_deltapoint_hud
+1icon_layer                              = deltapoint
+1icon_layer_x                            = 35
+1icon_layer_y                            = -28
+
+inv_weight                  			= 2.32
+
+[wpn_desert_eagle_deltapoint_hud]:wpn_desert_eagle_hud
+        item_visual                 = anomaly_weapons\wpn_desert_eagle\wpn_desert_eagle_deltapoint_hud.ogf
+        aim_hud_offset_pos               = -0.053142, 0.014696, 0
+        aim_hud_offset_pos_16x9          = -0.053142, 0.014696, 0
+        aim_hud_offset_rot               = -0.016302, -0.009924, -0.008
+        aim_hud_offset_rot_16x9          = -0.016302, -0.009924, -0.008
+
