--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -324,7 +324,6 @@
 ![pn23] --Dynamic, NVG, 1x-6x
 	s3ds_reticle_size 	= 4.38	
 	s3ds_eye_relief 	= 1.98
-	;s3ds_ffp			= 1	
 	s3ds_chroma_power	= 0.05	
 	s3ds_image_type 	= 1
 	s3ds_reticle_type	= 7
@@ -355,14 +354,14 @@
 	s3ds_reticle_size 	= 4.35
 	s3ds_eye_relief 	= 4
 	s3ds_exit_pupil		= 0.4	
-	;s3ds_ffp			= 1	
+	s3ds_ffp			= 1	
 	magnification 		= 8
 	
 ![mark8_rmr] --Dynamic, leupold, 1x-8x
 	s3ds_reticle_size 	= 4.35
 	s3ds_eye_relief 	= 4
 	s3ds_exit_pupil		= 0.4	
-	;s3ds_ffp			= 1	
+	s3ds_ffp			= 1	
 	magnification 		= 8
 	
 ![march_f_shorty] --Dynamic, 1x-8x
